--- a/application.yml
+++ b/application.yml
@@ -1,15 +1,16 @@
 spring:
   profiles:
-    active:
-      - dev
+    active: dev
 ---
 spring:
-  profiles: dev
+  profiles:
+    active: div
   application:
     name: microservicecloud-config-atguigu-dev
 ---
 spring:
-  profiles: test
-    application:
-      name: microservicecloud-config-atguigu-test
+  profiles:
+    active: test
+  application:
+    name: microservicecloud-config-atguigu-test
 #请保存utf-8格式
